# botc-list-generator

./: .gitignore  Cargo.toml  botc-list-generator-52a442cbeb8067b6.js  botc-list-generator-52a442cbeb8067b6_bg.wasm  botc-list-generator-589cab47b44c9f0a_bg.wasm  botc-list-generator-9f31449dabdd4ee8_bg.wasm  botc-list-generator-c25589f17619106d_bg.wasm  botc-list-generator-d9edd0316e32dfc4.js  botc-list-generator-d9edd0316e32dfc4_bg.wasm  botc-list-generator-fda724c00c33e828.js  botc-list-generator-fda724c00c33e828_bg.wasm  index-228138e5179e8e69.css  index-348c535597710ffe.css  index-7409bde6e79b727f.css  index.html  index.scss
.github/workflows/: cd.yml  check.yml  ci.yml  deploy.yml
scripts/: scrape_wiki_icon_links.py
src/: app.rs  consts.rs  data.json  main.rs
src/logic/: character.rs  condition.rs  data.rs  state.rs
