[package]
name = "botc-list-generator"
version = "0.1.0"
edition = "2024"

[dependencies]
getrandom = { version = "0.3.1", features = ["wasm_js"] }
gloo-dialogs = "0.2.0"
gloo-storage = "0.3.0"
rand = "0.9.0"
serde = { version = "1.0.218", features = ["serde_derive"] }
serde_json = "1.0.140"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["time"] }
tracing-web = "0.1.3"
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = ["HtmlInputElement"] }
yew = { version = "0.21.0", features = ["csr"] }

[lints.clippy]
map_entry = "allow"
